<resources>
    <string name="app_name">EventLogger2</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Enter Event Name Here</string>
    <string name="date">Date:</string>
    <string name="add_event">Add Event</string>
    <string name="check_events">Check Events</string>
    <string name="time">Time:</string>
    <string name="till">till</string>

    <string-array name="months_array">
        <item> </item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days_array">
        <item> </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="firstTime_array">
        <item> </item>
        <item>1am</item>
        <item>2am</item>
        <item>3am</item>
        <item>4am</item>
        <item>5am</item>
        <item>6am</item>
        <item>7am</item>
        <item>8am</item>
        <item>9am</item>
        <item>10am</item>
        <item>11am</item>
        <item>12am </item>
        <item>1pm</item>
        <item>2pm</item>
        <item>3pm</item>
        <item>4pm</item>
        <item>5pm</item>
        <item>6pm</item>
        <item>7pm</item>
        <item>8pm</item>
        <item>9pm</item>
        <item>10pm</item>
        <item>11pm</item>
        <item>12pm</item>
    </string-array>

    <string-array name="secondTime_array">
        <item> </item>
        <item>1am</item>
        <item>2am</item>
        <item>3am</item>
        <item>4am</item>
        <item>5am</item>
        <item>6am</item>
        <item>7am</item>
        <item>8am</item>
        <item>9am</item>
        <item>10am</item>
        <item>11am</item>
        <item>12am </item>
        <item>1pm</item>
        <item>2pm</item>
        <item>3pm</item>
        <item>4pm</item>
        <item>5pm</item>
        <item>6pm</item>
        <item>7pm</item>
        <item>8pm</item>
        <item>9pm</item>
        <item>10pm</item>
        <item>11pm</item>
        <item>12pm</item>
    </string-array>


</resources>
